--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
 <section class="normal">
@@ -26,7 +26,7 @@
 
 
 
-<section class="imagem" id="img1">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes<br>
         É tudo abreviado<br>
@@ -34,7 +34,7 @@
         O "O" e o "E" foi riscado<br>
         Para declarar o amor<br>
         Basta botar uma flor<br>
-        E um coração desenhado.<br>
+        E um coração desenhado.
     </p>
 </section>
 
@@ -48,7 +48,7 @@
         Ou vai até no começo<br>
         Agora é .com<br>
         Se o saite é muito bom<br>
-        Ele vale um alto preço.<br>
+        Ele vale um alto preço.
     </p>
     
     <p>
@@ -58,13 +58,13 @@
         Ponto e vírgula e um asterisco<br>
         Um beijo significa<br>
         Pra entender como fica<br>
-        Decifre esse rabisco.<br>
+        Decifre esse rabisco.
     </p>
 </section>
 
 
 
-<section class="imagem" id="img2">
+<section class="imagem" id="img02">
     <p>
         Tenho saudade das cartas<br>
         Escritas com a própria mão<br>
@@ -72,7 +72,7 @@
         Só chegava no Verão<br>
         Mas matava a saudade<br>
         Era texto de verdade<br>
-        Nas linhas do coração.<br>
+        Nas linhas do coração.
     </p>
 </section>
 
@@ -86,7 +86,7 @@
         A pessoa foi embora<br>
         Abriu outro aplicativo<br>
         O mundo ficou cativo<br>
-        Da tecnologia do agora.<br>
+        Da tecnologia do agora.
     </p>
     
     <p>
@@ -96,11 +96,11 @@
         Se quiser, faça esse teste<br>
         Dois pontos são dois joelhos<br>
         Seus lábios são aparelhos<br>
-        Deixe que Deus interprete.<br>
+        Deixe que Deus interprete.
     </p>
 </section>
 <footer>
-    <p>Criado por <a href="https://robsonbernardino.github.io/portifolio-html-css/">Robson Bernardino</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
+    <p>Criado por <a href="https://robsonbernardino.github.io/portifolio-html-css/" target="_blank">Robson Bernardino</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
 </footer>
 </body>
 </html>
